--- a/.github/workflows/release-uberjar.yaml
+++ b/.github/workflows/release-uberjar.yaml
@@ -25,10 +25,15 @@ jobs:
         id: version
         run: echo ::set-output name=snapshot::$(sbt -no-colors 'print version' | tail -n 1)
 
+      - name: Show Version
+        run: echo $(sbt -no-colors 'print version' | tail -n 1)
+
+      - name: Output Version
+        run: echo "${{ steps.version.outputs.snapshot }} :rocket:" >> $JAR_VERSION
+
       - name: Publish Uber JAR
         uses: actions/upload-artifact@v2
         with:
-          version:
-          name: spark-pinecone-uber-jar-{{version}}.jar
-          path: spark-pinecone/target/scala-2.12/spark-pinecone-{{version}}.jar
+          name: spark-pinecone-uber-jar-${{ env.JAR_VERSION }}.jar
+          path: spark-pinecone/target/scala-2.12/spark-pinecone-${{ env.JAR_VERSION }}.jar
 
